--- a/index.html
+++ b/index.html
@@ -2,34 +2,56 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>Quran Shuffler</title>
-    <meta name="description" content="Daily Quran recitation planner for your prayers">
+    <meta
+      name="description"
+      content="Daily Quran recitation planner for your prayers"
+    />
     <meta name="author" content="Lovable" />
     <meta name="theme-color" content="#228B5B" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Quran Shuffler" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Scheherazade+New:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Amiri+Quran&family=Noto+Naskh+Arabic:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-
-    
-    
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta property="og:title" content="Quran Shuffler">
-  <meta name="twitter:title" content="Quran Shuffler">
-  <meta property="og:description" content="Daily Quran recitation planner for your prayers">
-  <meta name="twitter:description" content="Daily Quran recitation planner for your prayers">
-  <link rel="icon" type="image/png" href="https://storage.googleapis.com/gpt-engineer-file-uploads/l6rpC29fJ5a5zi0Qpl7wi5PDjQn1/uploads/1768618817838-Gemini_Generated_Image_gk3gv9gk3gv9gk3g.png">
-</head>
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
+    <meta property="og:title" content="Quran Shuffler" />
+    <meta name="twitter:title" content="Quran Shuffler" />
+    <meta
+      property="og:description"
+      content="Daily Quran recitation planner for your prayers"
+    />
+    <meta
+      name="twitter:description"
+      content="Daily Quran recitation planner for your prayers"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://storage.googleapis.com/gpt-engineer-file-uploads/l6rpC29fJ5a5zi0Qpl7wi5PDjQn1/uploads/1768618817838-Gemini_Generated_Image_gk3gv9gk3gv9gk3g.png"
+    />
+  </head>
 
   <body>
     <div id="root"></div>
